--- a/TestAPP/app/src/main/res/layout/fragment_view_fragment1.xml
+++ b/TestAPP/app/src/main/res/layout/fragment_view_fragment1.xml
@@ -16,22 +16,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/sensorsbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="48dp"
         android:text="Start" />
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/button1">
-        <com.google.android.gms.fit.samples.common.logger.LogView
-            android:id="@+id/sample_logview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical" />
-    </ScrollView>
+    <!--<ScrollView-->
+        <!--android:id="@+id/scrView1"-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:layout_below="@id/button1">-->
+        <!--<com.google.android.gms.fit.samples.common.logger.LogView-->
+            <!--android:id="@+id/sample_logview"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:scrollbars="vertical" />-->
+    <!--</ScrollView>-->
+    <TextView
+        android:id="@+id/txvResult1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:layout_below="@id/sensorsbtn"/>
 
 </RelativeLayout>
