--- a/TestAPP/app/src/main/res/layout/fragment_view_fragment3.xml
+++ b/TestAPP/app/src/main/res/layout/fragment_view_fragment3.xml
@@ -15,22 +15,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/recordingbtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
-        android:layout_marginBottom="48dp"
-        android:text="Start" />
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/button3">
-        <com.google.android.gms.fit.samples.common.logger.LogView
-            android:id="@+id/sample_logview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical" />
-    </ScrollView>
+        android:text="Start3" />
+    <!--<ScrollView-->
+        <!--android:layout_width="fill_parent"-->
+        <!--android:layout_height="fill_parent"-->
+        <!--android:layout_below="@id/button3">-->
+        <!--<com.google.android.gms.fit.samples.common.logger.LogView-->
+            <!--android:id="@+id/sample_logview"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:scrollbars="vertical" />-->
+    <!--</ScrollView>-->
+    <TextView
+        android:id="@+id/txvResult3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:layout_below="@id/recordingbtn"/>
 
 </RelativeLayout>
