--- a/TestAPP/app/src/main/res/layout/history_view.xml
+++ b/TestAPP/app/src/main/res/layout/history_view.xml
@@ -6,8 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ViewFragment3">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
@@ -15,14 +14,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <Button
-        android:id="@+id/recordingbtn"
+        android:id="@+id/historybtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Start3" />
+        android:text="Start" />
     <!--<ScrollView-->
         <!--android:layout_width="fill_parent"-->
         <!--android:layout_height="fill_parent"-->
-        <!--android:layout_below="@id/button3">-->
+        <!--android:layout_below="@id/button2">-->
         <!--<com.google.android.gms.fit.samples.common.logger.LogView-->
             <!--android:id="@+id/sample_logview"-->
             <!--android:layout_width="wrap_content"-->
@@ -30,10 +29,10 @@
             <!--android:scrollbars="vertical" />-->
     <!--</ScrollView>-->
     <TextView
-        android:id="@+id/txvResult3"
+        android:id="@+id/txvResult2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:layout_below="@id/recordingbtn"/>
+        android:layout_below="@id/historybtn"/>
 
 </RelativeLayout>
