--- a/TestAPP/app/src/main/res/menu/main.xml
+++ b/TestAPP/app/src/main/res/menu/main.xml
@@ -17,31 +17,29 @@ limitations under the License.
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity" >
+    <!--sensors api menu-->
     <item android:id="@+id/action_settings"
         android:title="@string/action_settings"
         android:orderInCategory="100"
         app:showAsAction="never" />
-
     <item android:id="@+id/action_unregister_listener"
         android:title="@string/action_unregister_listener"
         android:orderInCategory="100"
         app:showAsAction="never" />
-
+    <!--history api menu-->
     <item android:id="@+id/action_update_data"
         android:title="@string/action_update_session"
         android:orderInCategory="100"
         app:showAsAction="never" />
-
     <item android:id="@+id/action_delete_data"
         android:title="@string/action_delete_session"
         android:orderInCategory="100"
         app:showAsAction="never" />
-
+    <!--recording api menu-->
     <item android:id="@+id/action_dump_subs"
         android:title="@string/action_dump_subs"
         android:orderInCategory="100"
         app:showAsAction="never" />
-
     <item android:id="@+id/action_cancel_subs"
         android:title="@string/action_cancel_subs"
         android:orderInCategory="100"
