add time, permission all datatype

--- a/TestAPP/app/src/main/res/layout/activity_main.xml
+++ b/TestAPP/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,12 @@
         android:paddingTop="@dimen/appbar_padding_top"
         android:theme="@style/AppTheme.AppBarOverlay">
 
+        <TextView
+            android:id="@+id/mytime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17dp"/>
+
         <android.support.design.widget.TabLayout
             android:id="@+id/tabs"
             android:layout_width="match_parent"
