--- a/TestAPP/app/src/main/res/layout/sensors_view.xml
+++ b/TestAPP/app/src/main/res/layout/sensors_view.xml
@@ -35,6 +35,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:layout_below="@id/sensorsbtn"/>
+        android:layout_below="@id/sensorsbtn"
+        android:textSize="17dp" />
 
 </RelativeLayout>
