--- a/TestAPP/app/src/main/res/layout/multisensors_view.xml
+++ b/TestAPP/app/src/main/res/layout/multisensors_view.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/multisensors_view"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -31,18 +32,18 @@
     <!--android:scrollbars="vertical" />-->
     <!--</ScrollView>-->
     <TextView
-        android:id="@+id/stepView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:id="@+id/multisensorsView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical"
         android:layout_below="@id/multisensorsbtn"
         android:textSize="17dp" />
-    <TextView
-        android:id="@+id/acceView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:layout_below="@id/stepView"
-        android:textSize="17dp" />
+    <!--<TextView-->
+        <!--android:id="@+id/acceView"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:scrollbars="vertical"-->
+        <!--android:layout_below="@id/stepView"-->
+        <!--android:textSize="17dp" />-->
 
-</RelativeLayout>
+</LinearLayout>
