--- a/TestAPP/app/src/main/res/layout/multisensors_view.xml
+++ b/TestAPP/app/src/main/res/layout/multisensors_view.xml
@@ -20,17 +20,84 @@
             android:id="@+id/txt_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-        <Button
-            android:id="@+id/multisensorsbtn"
-            android:layout_width="wrap_content"
+
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Start2" />
+            android:orientation="horizontal">
+            <Button
+                android:id="@+id/multisensorsbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Start" />
+            <Button
+                android:id="@+id/stopbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Stop" />
+        </LinearLayout>
+
         <TextView
             android:id="@+id/multisensorstxView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:scrollbars="vertical"
             android:textSize="17dp" />
+
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/sensors_display"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+        </LinearLayout>
+
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" >
+            <RadioButton
+                android:id="@+id/chkstill"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="Still" />
+            <RadioButton
+                android:id="@+id/chkwalking"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="Walking" />
+            <RadioButton
+                android:id="@+id/chkrunning"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="Running" />
+            <RadioButton
+                android:id="@+id/chkbiking"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="Biking" />
+            <RadioButton
+                android:id="@+id/chkin_vehicle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="In Vehicle" />
+            <RadioButton
+                android:id="@+id/chktilting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+                android:text="Tilting" />
+        </RadioGroup>
 
 
         <!--<TextView-->
@@ -41,4 +108,5 @@
             <!--android:layout_below="@id/stepView"-->
             <!--android:textSize="17dp" />-->
     </LinearLayout>
+
 </ScrollView>
