--- a/TestAPP/app/src/main/res/layout/multisensors_view.xml
+++ b/TestAPP/app/src/main/res/layout/multisensors_view.xml
@@ -35,6 +35,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Stop" />
+            <Button
+                android:id="@+id/predictbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Predict" />
         </LinearLayout>
 
         <TextView
