--- a/TestAPP/app/src/main/res/layout/multisensors_view.xml
+++ b/TestAPP/app/src/main/res/layout/multisensors_view.xml
@@ -35,11 +35,21 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Stop" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
             <Button
                 android:id="@+id/predictbtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Predict" />
+            <Button
+                android:id="@+id/removebtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Remove" />
         </LinearLayout>
 
         <TextView
@@ -51,58 +61,79 @@
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/sensors_display"
+            android:id="@+id/display"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin">
+            <RadioGroup
+                android:id="@+id/radioGroup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" >
+                <RadioButton
+                    android:id="@+id/chkstill"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:text="Still" />
+                <RadioButton
+                    android:id="@+id/chkwalking"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:text="Walking" />
+                <RadioButton
+                    android:id="@+id/chkrunning"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:text="Running" />
+                <RadioButton
+                    android:id="@+id/chkbiking"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:text="Biking" />
+                <RadioButton
+                    android:id="@+id/chkin_vehicle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:text="In Vehicle" />
+                <RadioButton
+                    android:id="@+id/chktilting"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="15sp"
+                    android:text="Tilting" />
+            </RadioGroup>
+            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                xmlns:tools="http://schemas.android.com/tools"
+                android:id="@+id/sensors_display"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="@dimen/activity_horizontal_margin">
+                <!--<TextView-->
+                    <!--android:id="@+id/txViewtest1"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:scrollbars="vertical"-->
+                    <!--android:textSize="15dp"-->
+                    <!--android:text="Test2"/>-->
+                <!--<TextView-->
+                    <!--android:id="@+id/txViewtest2"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:scrollbars="vertical"-->
+                    <!--android:textSize="15dp"-->
+                    <!--android:text="Test1"/>-->
+            </LinearLayout>
         </LinearLayout>
 
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-            <RadioButton
-                android:id="@+id/chkstill"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="Still" />
-            <RadioButton
-                android:id="@+id/chkwalking"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="Walking" />
-            <RadioButton
-                android:id="@+id/chkrunning"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="Running" />
-            <RadioButton
-                android:id="@+id/chkbiking"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="Biking" />
-            <RadioButton
-                android:id="@+id/chkin_vehicle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="In Vehicle" />
-            <RadioButton
-                android:id="@+id/chktilting"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="15sp"
-                android:text="Tilting" />
-        </RadioGroup>
+
 
 
         <!--<TextView-->
